fixed header img size on smaller screens

--- a/theme-italian-moto.css
+++ b/theme-italian-moto.css
@@ -28,4 +28,8 @@ body{
 	#alert-info{
 		visibility: hidden;
 	}
+	
+        .page-header img{
+	  width: 25%;
+	}
 }
